# mt-saas-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.k6.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_stripe_webhooks.py  0003_webhook_event_status_error.py
app/: config.py  db.py  main.py  ratelimit.py  redis_client.py
app/auth/: deps.py  tokens.py
app/billing/: gates.py
app/models/: __init__.py  auth_magic_link.py  enums.py  membership.py  org.py  project.py  task.py  user.py  webhook_event.py
app/rbac/: deps.py  perms.py
app/routes/: auth.py  health.py  orgs.py  projects.py  tasks.py  (+1 more)
docker/: Dockerfile  docker-entrypoint.sh
k6-results/: 20260101_092144_vus1.json  20260101_092144_vus10.json  20260101_092144_vus5.json  20260101_222040_vus1.json  20260101_222040_vus10.json  20260101_222040_vus5.json  20260101_225211_vus1.json  20260101_225211_vus5.json  20260101_230816_vus1.json  20260101_231755_vus1.json  20260101_231755_vus10.json  20260101_231755_vus5.json  20260102_075931_vus1.json  20260102_075931_vus10.json  20260102_075931_vus5.json  20260103_135215_vus1.json  20260103_135215_vus10.json  20260103_135215_vus5.json  summary.json
scripts/: demo.py  k6_smoke.js  report_k6.py  seed.py  smoke.sh
tests/: conftest.py  test_auth_magic_links.py  test_billing_gates.py  test_permissions_sweep.py  test_rbac_matrix.py  test_stripe_invoice_webhooks.py  test_tenant_isolation.py  test_webhooks_phase_c.py  test_webhooks_replay.py
(+4 files in other folders)
